static/css/partial/_post--detail.sass
.container
  &.post-detail
    text-align: center

    .contents-wrapper
      padding-left: 18%
      padding-right: 18%

    .post-content
      text-align: left
      color: var(--font-color--post-content)

      h1, h2, h3, h4, h5
        margin-block-start: 3em

      h1
        font-size: 1.5em

      h2
        font-size: 1.3em

      h3
        font-size: 1.1em

      h4
        font-size: 1em

      h5
        font-size: 0.85em

      a
        text-decoration: underline

      p
        margin-block-start: .5em
        margin-block-end: .5em

    .thumbnail
      border-radius: 0

    code
      line-height: 2em

    div
      &[class^=language]
        background: var(--background-color--file)
        border: 1px solid #eee
        padding: .5em 0
        color: #dadcf3
        overflow: auto
        border-top-color: #ffffff00

      .language-yaml
        .na, .pi
          color: #ff5722
        .c1
          color: #4caf50

      .language-html
        code
          line-height: 1em

        .cp, .nt
          color: #ffbf00
        .s
          color: #cddc39

      .language-plaintext
        font-weight: bold
        margin: 0 .2em
        color: #d14
        font-size: .85em
        font-family: var(--font-family--default)



    .stepper
      .title
        &:before
          content: attr(data-step)
          border-radius: 5px
          background: var(--background-color--stepper-title)
          padding: .15em .55em
          font-size: .8em
          margin-right: .5em
          color: var(--font-color--post-step-title)

    .file-wrapper
      .filename-badge
        font-size: .8em
        color: #fff
        background: var(--background-color--file)
        margin: 0
        display: inline-block
        padding: .5em 1em
        border: 1px solid #eee
        border-bottom: none

        &:before
          font-family: var(--font-family--icon)
          content: '\f15b'
          margin-right: .5em

    .warning
      font-size: .78em
      color: var(--font-color--post-warning)

      &:before
        font-size: 1.3em
        font-family: var(--font-family--icon)
        content: '\f071'
        margin-right: .5em
        font-weight: 900
        color: #f7c93f

    .info
      font-size: .78em
      color: var(--font-color--post-info)

      &:before
        font-size: 1.3em
        font-family: var(--font-family--icon)
        content: '\f05a'
        margin-right: .5em
        font-weight: 900

    blockquote
      margin: 0
      background: var(--background-color--blockquote)
      border: 1px solid #fefefe
      padding: .5em 1.5em
      font-size: .9em
      border-left: 4px solid var(--key-color--default)

      a
        color: #2196f3
        font-size: .9em

    &.text
      .thumbnail
        width: 70%

@media screen and (max-width: 768px)
  .container
    &.post-detail
      &.text
        .thumbnail
          width: 100%

      .contents-wrapper
        padding-left: calc(var(--padding--contents-wrapper-x) / 2)
        padding-right: calc(var(--padding--contents-wrapper-x) / 2)

